tests/fixtures/invalid/enum_forward_declaration.c
enum Color;
int main(void) {
    return 0;
}
